--- a/inst/exercises/isotopes/O18exchange/O18exchange_Q.Rmd
+++ b/inst/exercises/isotopes/O18exchange/O18exchange_Q.Rmd
@@ -3,6 +3,7 @@ title: "18O exchange between water reservoirs"
 subtitle: "Exercises Accompanying the Course Reaction Transport Modelling in the Hydrosphere"
 author: "Lubos Polerecky, Utrecht University"
 date: "February 2022"
+abstract: \noindent Water molecules continuously exchange between the liquid phase and gas phase due to evaporation and precipitation. Because at a given temperature the lighter ($H_2{}^{16}O$) and heavier ($H_2{}^{18}O$) isotopologues of water move on average at different velocities and experience on average slightly different interactions within the liquid phase, the ${}^{18}O/{}^{16}O$ isotope ratio differs between the water vapor and liquid water. In this reader, we will show how to model the dynamics of this isotope exchange. We will apply the model to study how fast the equilibrium isotope fractionation between the liquid water and water vapor is reached. Additionally, we will apply the model to explore isotope exchange between two isotopically distinct water reservoirs enclosed in a gas-tight container filled with air.
 output: pdf_document
 header-includes: 
   \usepackage{float} 
