--- a/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_Q.Rmd
+++ b/inst/exercises/chemistry/equilibriumHCO3/equilibriumHCO3_Q.Rmd
@@ -26,7 +26,7 @@ $$ Reaction~3: \quad H_2O \rightleftarrows OH^- + H^+$$
 
 Taken together, we will consider a system of *six* chemical species --- carbonic acid ($H_2CO_3$), bicarbonate ($HCO_3^-$), carbonate ($CO_3^{2-}$), water ($H_2O$), hydroxide ($OH^-$), and protons ($H^+$) --- all of them coupled via the fast reversible reactions 1--3. Our aim is to model how this coupling affects the dynamics of $pH$ if one of the components, specifically $H_2CO_3$, is added to/removed from the system at a rate that is much slower than the rate of the reversible reactions. 
 
-(\textbf{Note:} This process could be, for example, the addition of $H_2CO_3$ due to the exchange with atmospheric $CO_2$ or due to the mineralization of organic matter. Note that each of these processes is already a two-step process: the addition of $CO_2$ to water, which is a slow irreversible process, followed by a chemical reaction $CO_2 + H_2O \rightleftarrows H_2CO_3$, which is a fast reversible process. However, because the rate of the overall process is limited by the rate of the slow process, we can consider the net effect of these two processes to be a slow addition of $H_2CO_3$. Depending on the perspective, and given the reactions 1 and 2, one can also consider it as a slow addition of $HCO_3^- + H^+$ or $CO_3^{2-} + 2H^+$. However, here we will consider $H_2CO_3$ as the added species because the ultimate source is the $CO_2$ molecule from the atmosphere or mineralized organic matter.)
+(**Note:** This process could be, for example, the addition of $H_2CO_3$ due to the exchange with atmospheric $CO_2$ or due to the mineralization of organic matter. Note that each of these processes is already a two-step process: the addition of $CO_2$ to water, which is a slow irreversible process, followed by a chemical reaction $CO_2 + H_2O \rightleftarrows H_2CO_3$, which is a fast reversible process. However, because the rate of the overall process is limited by the rate of the slow process, we can consider the net effect of these two processes to be a slow addition of $H_2CO_3$. Depending on the perspective, and given the reactions 1 and 2, one can also consider it as a slow addition of $HCO_3^- + H^+$ or $CO_3^{2-} + 2H^+$. However, here we will consider $H_2CO_3$ as the added species because the ultimate source is the $CO_2$ molecule from the atmosphere or mineralized organic matter.)
 
 The overall approach will be analogous to that developed in part I, although the mathematical treatment will be more challenging due to the greater number of species (6 instead of 3) and reactions (3 instead of 1) involved. Specifically, since we are only interested in modelling the dynamics due to the slow process, we can significantly simplify the model by reformulating it in terms of *lump-sum* species. We will show that for the fast equilibration reactions 1--3, these new lump-sum species are the total dissolved inorganic carbon, $DIC = H_2CO_3  + HCO_3^- + CO_3^{2-}$, alkalinity (representing the total excess negative charge), $ALK = HCO_3^- + 2\cdot CO_3^{2-} + OH^- - H^+$, and the total hydroxide, $H_xO = H_2O + OH^-$. 
 
@@ -39,7 +39,7 @@ The aproach followed in this reader is based on a set of tasks that you should b
 
 ## Task 1: Mass balance equations of the dissolved carbonate system
 
-Assume that the forward and backward reactions 1--3 are *elementary reactions*. Denote the corresponding rate constants as $k_{1f}$ (units of $s^{-1}$) and $k_{1b}$ (units of $(mol~L^{-1})^{-1}~s^{-1}$) for the reaction 1, $k_{2f}$ and $k_{2b}$ (the same units) for the reaction 2, and $k_{3f}$ and $k_{3b}$ (the same units) for the reaction 3. Additionally, assume that the species $H_2CO_3$ is added at a *net* rate $R_C$ ($mol~L^{-1}~s^{-1}$). (\textbf{Note:} In this exercise, we limit ourselves to \emph{one} slow process that adds \emph{one} specific species to the system. Analogous approach could be taken to include the addition of multiple slow processes, each affecting a different species in the system.)
+Assume that the forward and backward reactions 1--3 are *elementary reactions*. Denote the corresponding rate constants as $k_{1f}$ (units of $s^{-1}$) and $k_{1b}$ (units of $(mol~L^{-1})^{-1}~s^{-1}$) for the reaction 1, $k_{2f}$ and $k_{2b}$ (the same units) for the reaction 2, and $k_{3f}$ and $k_{3b}$ (the same units) for the reaction 3. Additionally, assume that the species $H_2CO_3$ is added at a *net* rate $R_C$ ($mol~L^{-1}~s^{-1}$). (**Note:** In this exercise, we limit ourselves to *one* slow process that adds *one* specific species to the system. Analogous approach could be taken to include the addition of multiple slow processes, each affecting a different species in the system.)
 
 * Formulate mass balance equations considering the four processes including the acid-base reactions 1--3 and the process that adds $H_2CO_3$ to the system at a rate $R_C$. 
 
@@ -49,9 +49,9 @@ You should arrive at 6 differential equations for the state variables $[H_2CO_3]
 
 Assume that the rate of the slow process is zero ($R_C=0$). Using the mass balance equations formulated in Task 1, 
 
-* derive relationships between the equilibrium concentrations of the state variables describing the system. \textbf{Hint:} consider that the time-derivatives of the state variables are zero when the system is in equilibrium.
+* derive relationships between the equilibrium concentrations of the state variables describing the system. **Hint:** consider that the time-derivatives of the state variables are zero when the system is in equilibrium.
 
-You should arrive at *three* equations that relate the equilibrium concentrations of [$H_2CO_3$], [$HCO_3^-$], [$CO_3^{2-}$], [$H_2O$], [$OH^-$], and [$H^+$]. To simplify the relationships, define the ratios between the forward and backward rate constants as the so-called dissociation constants: $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$, where the latter value is related to the \emph{ionic product of water}, $K_w = [OH^-]\cdot [H^+]$, and water concentration, $[H_2O]$, according to $K_w' = K_w/[H_2O]$. For water with different salinities and temperatures, the values of the dissociation constants and other relevant parameters can be calculated using the *AquaEnv* package (Hofmann et al., 2010). At $25\,^\circ$C, salinity 0, and pressure of 1 bar, the corresponding values are 
+You should arrive at *three* equations that relate the equilibrium concentrations of [$H_2CO_3$], [$HCO_3^-$], [$CO_3^{2-}$], [$H_2O$], [$OH^-$], and [$H^+$]. To simplify the relationships, define the ratios between the forward and backward rate constants as the so-called dissociation constants: $K_1 = k_{1f}/k_{1b}$, $K_2 = k_{2f}/k_{2b}$, and $K_w' = k_{3f}/k_{3b}$, where the latter value is related to the *ionic product of water*, $K_w = [OH^-]\cdot [H^+]$, and water concentration, $[H_2O]$, according to $K_w' = K_w/[H_2O]$. For water with different salinities and temperatures, the values of the dissociation constants and other relevant parameters can be calculated using the *AquaEnv* package (Hofmann et al., 2010). At $25\,^\circ$C, salinity 0, and pressure of 1 bar, the corresponding values are 
 ```{r, message=FALSE}
 require(AquaEnv)
 
@@ -76,19 +76,24 @@ knitr::kable(cbind(c("$K_1$", "$K_2$", "$K_w$", "$K_w'$", "density", "concentrat
 ## Task 3: Lump-sum species
 
 * Show that if you define the lump-sum species according to 
-$$DIC = H_2CO_3  + HCO_3^- + CO_3^{2-},$$
-$$ALK = HCO_3^- + 2\cdot CO_3^{2-} + OH^- - H^+,$$ 
-$$H_xO = H_2O + OH^-,$$
+$$
+\begin{array}{rcl}
+DIC & = & H_2CO_3  + HCO_3^- + CO_3^{2-}, \\[4mm]
+ALK & = & HCO_3^- + 2\cdot CO_3^{2-} + OH^- - H^+, \\[4mm]
+H_xO & = & H_2O + OH^-,
+\end{array}
+$$
 their time derivatives are only affected by the slow process but *not* by the reversible reactions 1--3. 
 
 Note that these new state variables correspond to the *total concentration of dissolved inorganic carbon* (DIC), the *excess concentration of negatively charged species* (also called *carbonate alkalinity*, ALK), and the *total hydroxide concentration* ($H_xO$) in the system. 
 
 ## Task 4: From lump-sum species to original species
 
-Assume that the system is in an equilibrium and that the concentrations $[DIC]$, $[ALK]$ and $[H^+]$ are *known*. Note that $pH = -\log{[H^+]}$, where $[H^+]$ is expressed in mol/liter of solution. Using the equilibrium relationships found in Task 2, 
+Assume that the system is in equilibrium and that the concentrations $[DIC]$, $[ALK]$ and $[H^+]$ are *known*. Note that $pH = -\log_{10}{[H^+]}$, where $[H^+]$ is expressed in mol/liter of solution. Using the equilibrium relationships found in Task 2, 
 
-* derive expressions for $[H_2CO_3]$, $[HCO_3^-]$, $[CO_3^{2-}]$, and $[OH^-]$ as a function of $[DIC]$ and $[H^+]$.
-* find a relationship between $[ALK]$, $[DIC]$ and $[H^+]$ from which one of the three state variables can be calculated provided that the other two are known.
+* derive expressions for $[H_2CO_3]$, $[HCO_3^-]$, $[CO_3^{2-}]$, and $[OH^-]$ as a function of $[DIC]$, $[H_xO]$ and $[H^+]$;
+
+* find a relationship between $[ALK]$, $[DIC]$, $[H_xO]$ and $[H^+]$ from which one of the four quantities can be calculated provided that the other three are known.
 
 Solving this exercise will be somewhat laborious, but technically (mathematically) rather straight-forward. 
 
