polishing RTMtutorial.Rd

--- a/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD_Q.Rmd
+++ b/inst/exercises/chemistry/equilibriumOMD/equilibriumOMD_Q.Rmd
@@ -13,7 +13,7 @@ output:
 
 # Aim
 
-In part I and II of the Reader "Local equilibrium chemistry in R", we have shown how to approach pH modeling in scenarios where proton dynamics is affected by 1 and 3 fast reversible reactions, respectively. The reactions corresponded to dissociation of ammonium and carbonic acid and self-ionization of water. Here, we will combine what we have learned there to show how to approach pH modeling when all of these reversible reactions occur within the system at the same time. An important step will be the generalization of the concept of alkalinity to include contributions from all charged species (carbonate, bicarbonate, ammonium, hydroxide, and protons). We will illustrate the model by studying pH dynamics in water induced by organic matter degradation. Additionally, we will revisit the ammonia degassing model originally developed in part I of the Reader to illustrate the pH buffering provided by the dissolved carbonate species in the system.
+In parts I and II of the reader series "Local equilibrium chemistry in R", we have shown how to approach pH modeling in scenarios where proton dynamics is affected by 1 and 3 fast reversible reactions, respectively. The reactions corresponded to dissociation of ammonium and carbonic acid and self-ionization of water. Here, we will combine what we have learned there and show how to approach pH modeling when all of these reversible reactions occur within the system at the same time. An important step will be the generalization of the concept of alkalinity to include contributions from all charged species (carbonate, bicarbonate, ammonium, hydroxide, and protons). We will illustrate the model by studying pH dynamics in water induced by organic matter degradation. Additionally, we will revisit the ammonia degassing model originally developed in part I of this reader series to illustrate the pH buffering provided by the dissolved carbonate species in the system.
 
 # Approach
 
